Working out final additions. Use xelatex so section refs fixed.
There seems to be a problem with section label references using the
-pdf command of latexmk requiring a second compile to fixed it.
-xelatex does not seem suffer from this deficiency.

I have plans for discussing a Caires and Pfenning-style example.
I have plans for presenting cofinite quantification versions of
some of Wadlers typing rules.
I have plans to have a couple more plans.

--- a/proposal/Makefile
+++ b/proposal/Makefile
@@ -6,7 +6,7 @@ PDFS:=$(TEX:%.tex=%.pdf)
 all: $(PDFS)
 
 proposal.pdf:proposal.tex $(DEPS)
-	latexmk -pdf proposal.tex
+	latexmk -xelatex proposal.tex
 
 clean:
 	rm -f *.log *.aux *.toc *.out
