--- a/proposal/Makefile
+++ b/proposal/Makefile
@@ -6,7 +6,7 @@ PDFS:=$(TEX:%.tex=%.pdf)
 all: $(PDFS)
 
 proposal.pdf:proposal.tex $(DEPS)
-	latexmk -xelatex proposal.tex
+	latexmk -pdf proposal.tex
 
 clean:
 	rm -f *.log *.aux *.toc *.out
