Updated paper: CP section and added figures.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -3,7 +3,8 @@ TEX:=paper.tex
 PROPDEPS:=with-connect-rule.tex focus-rule.tex propmacros.tex\
 session-types.tex
 DEPS:=abstract.tex introduction.tex background.tex formalisation.tex\
-futurework.tex conclusion.tex acknowledgements.tex macros.tex cp.tex paper.bib
+futurework.tex conclusion.tex acknowledgements.tex macros.tex cp.tex\
+principalcp.tex commconvonecp.tex commconvtwocp.tex gv.tex paper.bib
 PROPDEPS:=$(PROPDEPS:%.tex=../proposal/%.tex)
 PDFS:=$(TEX:%.tex=%.pdf)
 
