--- a/paper/Makefile
+++ b/paper/Makefile
@@ -4,7 +4,8 @@ PROPDEPS:=with-connect-rule.tex focus-rule.tex propmacros.tex\
 session-types.tex
 DEPS:=abstract.tex introduction.tex background.tex formalisation.tex\
 futurework.tex conclusion.tex acknowledgements.tex macros.tex cp.tex\
-principalcp.tex commconvonecp.tex commconvtwocp.tex gv.tex paper.bib
+principalcp.tex commconvonecp.tex commconvtwocp.tex gv.tex\
+gv-types-terms.tex cp-types-terms.tex paper.bib
 PROPDEPS:=$(PROPDEPS:%.tex=../proposal/%.tex)
 PDFS:=$(TEX:%.tex=%.pdf)
 
