Added Coq code to be described.
Also removed dependency of paper folder on the proposal items.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -1,12 +1,10 @@
 
 TEX:=paper.tex
-PROPDEPS:=with-connect-rule.tex focus-rule.tex propmacros.tex\
-session-types.tex
 DEPS:=abstract.tex introduction.tex background.tex formalisation.tex\
 futurework.tex conclusion.tex acknowledgements.tex macros.tex cp.tex\
 principalcp.tex commconvonecp.tex commconvtwocp.tex gv.tex\
-gv-types-terms.tex cp-types-terms.tex paper.bib
-PROPDEPS:=$(PROPDEPS:%.tex=../proposal/%.tex)
+gv-types-terms.tex cp-types-terms.tex with-connect-rule.tex focus-rule.tex\
+propmacros.tex session-types.tex paper.bib
 PDFS:=$(TEX:%.tex=%.pdf)
 
 all: $(PDFS)
