--- a/paper/Makefile
+++ b/paper/Makefile
@@ -2,7 +2,7 @@
 TEX:=paper.tex
 DEPS:=abstract.tex introduction.tex background.tex formalisation.tex\
 futurework.tex conclusion.tex acknowledgements.tex macros.tex cp.tex\
-principalcp.tex commconvonecp.tex commconvtwocp.tex gv.tex\
+principalcp.tex ccoutput.tex extract.tex gv.tex\
 gv-types-terms.tex cp-types-terms.tex with-connect-rule.tex focus-rule.tex\
 propmacros.tex session-types.tex paper.bib
 PDFS:=$(TEX:%.tex=%.pdf)
