Working on the slide content for presentation.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -1,5 +1,5 @@
 
-TEX:=paper.tex
+TEX:=paper.tex presentation.tex
 DEPS:=abstract.tex introduction.tex background.tex formalisation.tex\
 futurework.tex conclusion.tex acknowledgements.tex macros.tex cp.tex\
 principalcp.tex ccoutput.tex extract.tex gv.tex papercut.tex wft.tex\
@@ -10,8 +10,11 @@ PDFS:=$(TEX:%.tex=%.pdf)
 
 all: $(PDFS)
 
-paper.pdf:paper.tex $(DEPS) $(PROPDEPS)
+paper.pdf:paper.tex $(DEPS)
 	latexmk -pdf paper.tex
+
+presentation.pdf:presentation.tex $(DEPS)
+	latexmk -pdf presentation.tex
 
 clean:
 	rm -f *.log *.aux *.toc *.out
